# ifhany

./: .eslintrc.js  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  docker-compose.yml  jest.config.ts  package.json  permissions.json  schema.prisma  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
__tests__/factorys/filter/: customEmoji.test.ts  sanitizeEmoji.test.ts
__tests__/factorys/listeners/: uncaughtExceptions.test.ts
__tests__/factorys/verify/: customEmojiExists.test.ts  emojiFormat.test.ts  exists.test.ts  isJSON.test.ts  messageLenght.test.ts  permissions.test.ts
__tests__/handlers/: cache.test.ts
__tests__/handlers/preset/: utils.test.ts
__tests__/mocks/: client.spec.ts
config/: Dockerfile  docker-compose_dev.yml  docker-compose_test.yml
config/default/: permissions.json
config/default/messages/: embed.json
data/default/: logs.json  permissions.json
data/default/messages/: embed.json  normal.json
locales/: command.yml  error.yml
prisma/: schema.prisma
scripts/: build  dev  dev-init  dev.ps1  on-container_dev-init.bash  on-container_test.bash  test
src/: index.ts  main.rs
src/commands/: mod.rs
src/commands/conf/: config.ts
src/commands/mod/: autoemote.ts  autoreport.ts  ban.ts  case.ts  kick.ts  movecontent.ts  mute.ts  punishment.ts  warn.ts
src/handlers/: error.rs  event.rs  i18n.rs  mod.rs  punishment.rs
src/prisma/: schema.prisma
src/tests/: utils.rs
src/types/: global.d.ts
src/utils/: filter.rs  matchs.rs  mod.rs  parse.rs  verify.rs
(+35 files in other folders)
