[package]
name = "ifhany"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = "1.0.215"
serenity = "0.12.4"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "mongodb",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "mongodb",
] }
dotenv = "0.15.0"
tokio = "1.41.1"
poise = "0.6.1"

[alias]
prisma = "run --bin prisma --"
